Basic structure and GLFW completed and GLES3 started.
Completed base structure of the program, got CMakeLists seemingly
working, got basic GLFW windowing functionality down, and started
working on the GLES 3 implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required (VERSION 2.6)
-project (Step01_Graphics)
+cmake_minimum_required (VERSION 2.8)
 
 # SET VARIABLES
 set (CMAKE_GENERATOR "Unix Makefiles" CACHE INTERNAL "" FORCE)
 
-# VERSION NUMBER HERE
+# S E T VERSION NUMBER HERE
 set (KCPPGame01_VERSION_MAJOR 0)
 set (KCPPGame01_VERSION_MINOR 1)
 
@@ -13,40 +12,20 @@ set (KCPPGame01_VERSION_MINOR 1)
 
 # JUST SOME LOGIC (IGNORE)
 
+set(${BTARGET} 1)
+
 if (TARGET_WEB_EM_GLES3_0)
-	set(TARGET_ATTR_BIGENV_WEB 1)
-	set(TARGET_ATTR_TOOL_EM 1)
-	set(TARGET_ATTR_REND_GLES_3_0 1)
+    set(TARGET_ATTR_BIGENV_WEB 1)
+    set(TARGET_ATTR_TOOL_EM 1)
+    set(TARGET_ATTR_REND_GLES_3_0 1)
+    set(TARGET_ATTR_RENDFB_GLES_2_0 1)
 endif (TARGET_WEB_EM_GLES3_0)
 
 if (TARGET_ATTR_TOOL_EM)
-	set(TARGET_ATTR_WIND_GLFW 1)
-	set(TARGET_ATTR_NET_EM 1)
+    set(TARGET_ATTR_WIND_GLFW 1)
+    set(TARGET_ATTR_NET_EM 1)
 endif (TARGET_ATTR_TOOL_EM)
 
-
-# STANDARD CONFIGURATION
-configure_file (
-	"${PROJECT_SOURCE_DIR}/CMakeConfig.hpp.in"
-	"${PROJECT_SOURCE_DIR}/CMakeConfig.hpp"
-	)
-
-include_directories("${PROJECT_BINARY_DIR}")
-
-
-# SPECIFIC CONFIGURATION (sets specific)
-
-
-
-# EXECUTABLE!
-if (TARGET_SERVER)
-	add_executable(Step01_Graphics src/server/main.cpp)
-else (TARGET_SERVER)
-	add_executable(Step01_Graphics src/client/main.cpp)
-endif (TARGET_SERVER)
-
-sET(CMAKE_CXX_FLAGS  "-o index.html ${CMAKE_CXX_FLAGS}")
-
-# TESTS
-
+# DELEGATE TO SOURCE CMAKELISTS
+add_subdirectory(src)
 
