Added debugging flags and a global exception catcher in top level main.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ set (KCPPGame01_VERSION_MINOR 1)
 
 
 # JUST SOME LOGIC (IGNORE)
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(TARGET_DEBUG 1)
+endif()
 
 set(${BTARGET} 1)
 
