--- a/src/CMakeConfig.hpp.in
+++ b/src/CMakeConfig.hpp.in
@@ -10,6 +10,8 @@
 #define KGAME_VERSION_MAJOR @KCPPGame01_VERSION_MAJOR@ 
 #define KGAME_VERSION_MINOR @KCPPGame01_VERSION_MINOR@
 
+#cmakedefine TARGET_DEBUG
+
 #cmakedefine TARGET_WEB_EM_GLES3_0
 #cmakedefine TARGET_WIN_VUL1_1
 #cmakedefine TARGET_UNIX_VUL1_1
