--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,9 +10,25 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories("${PROJECT_BINARY_DIR}")
 
 # SPECIFIC CONFIGURATION (sets specific)
-if (TARGET_ATTR_REND_GLES_3_0 AND TARGET_ATTR_TOOL_EM)
-    set(CMAKE_CXX_FLAGS  "-s USE_WEBGL2=1 ${CMAKE_CXX_FLAGS}")
-endif (TARGET_ATTR_REND_GLES_3_0 AND TARGET_ATTR_TOOL_EM)
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    if (TARGET_ATTR_TOOL_EM)
+        set(CMAKE_CXX_FLAGS  "-g4 -s EXCEPTION_DEBUG=1 -s WASM=0 -s DISABLE_EXCEPTION_CATCHING=0 --js-opts 0 ${CMAKE_CXX_FLAGS}")
+    else (TARGET_ATTR_TOOL_EM)
+        set(CMAKE_CXX_FLAGS  "-Og -g3 ${CMAKE_CXX_FLAGS}")
+    endif (TARGET_ATTR_TOOL_EM)
+    message("DEBUG MODE TRIGGERED")
+else()
+    set(CMAKE_CXX_FLAGS  "-O3 ${CMAKE_CXX_FLAGS}")
+endif()
+
+if (TARGET_ATTR_TOOL_EM)
+    if (TARGET_ATTR_REND_GLES_3_0)
+        set(CMAKE_CXX_FLAGS  "-s USE_WEBGL2=1 ${CMAKE_CXX_FLAGS}")
+    endif (TARGET_ATTR_REND_GLES_3_0)
+    if (TARGET_ATTR_WIND_GLFW)
+        set(CMAKE_CXX_FLAGS  "-s USE_GLFW=3 ${CMAKE_CXX_FLAGS}")   
+    endif (TARGET_ATTR_WIND_GLFW)
+endif (TARGET_ATTR_TOOL_EM)
 
 file (GLOB PROJ_SRC
     "*.h"
