--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ include_directories("${PROJECT_BINARY_DIR}")
 # SPECIFIC CONFIGURATION (sets specific)
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     if (TARGET_ATTR_TOOL_EM)
-        set(CMAKE_CXX_FLAGS  "-g4 -s EXCEPTION_DEBUG=1 -s WASM=0 -s DISABLE_EXCEPTION_CATCHING=0 --js-opts 0 ${CMAKE_CXX_FLAGS}")
+        set(CMAKE_CXX_FLAGS  "-Wall -g4 -s EXCEPTION_DEBUG=1 -s WASM=0 -s DISABLE_EXCEPTION_CATCHING=0 -s EXIT_RUNTIME=1 --js-opts 0 ${CMAKE_CXX_FLAGS}")
     else (TARGET_ATTR_TOOL_EM)
         set(CMAKE_CXX_FLAGS  "-Og -g3 ${CMAKE_CXX_FLAGS}")
     endif (TARGET_ATTR_TOOL_EM)
